# btg-svn

branches/0.9.7-mutex_shamanism/: ChangeLog  Makefile.am  configure.in
branches/0.9.7-mutex_shamanism/bcore/: addrport.cpp  btg_assert.cpp  command_factory.cpp  type.h  verbose.h
branches/0.9.7-mutex_shamanism/daemon/: daemondata.h  dconfig.cpp  progress.cpp
branches/0.9.7-mutex_shamanism/m4/: libgnutls.m4
branches/0.9.7-mutex_shamanism/script/: btg-config.in
branches/0.9.7-mutex_shamanism/stest/: Makefile.am  config.sh
branches/0.9.7-mutex_shamanism/utest/: test_gen_transport.cpp
tags/0.9.7/daemon/: Makefile.am  btgdaemon.cpp  connectionhandler.cpp  daemondata.cpp  dconfig.h  limitval.cpp  session_list.cpp  session_list.h  sessionsaver.h
tags/0.9.8-rc2/: README  configure.in
tags/0.9.8-rc2/bcore/: Makefile.am  command_factory.h  file_info.cpp  filestatus.h  hrr.cpp  hrr.h
tags/0.9.8-rc2/daemon/: btgdaemon.man  context.h  context_alert.cpp  context_file.cpp  daemonhandler.cpp  daemonhandler.h  dconfig.cpp  eventhandler.h  session_list.cpp  urlmgr.h
tags/0.9.8-rc2/m4/: btg_rblibtorrent_check.m4
tags/0.9.8-rc2/utest/: test_daemon.cpp
tags/1.0.0-rc1/: Makefile.am  configure.in  setup.sh
tags/1.0.0-rc1/bcore/: argif.h  logmacro.h  sbuf.cpp
tags/1.0.0-rc1/daemon/: context.h  context_file.cpp  dconfig.h  eventhandler.cpp  eventhandler.h  opid.cpp  opid.h  sessionsaver.h
tags/1.0.0-rc1/m4/: ac_cxx_have_vector_at.m4
tags/1.0.0-rc1/utest/: Makefile.am  listener.cpp
trunk/: AUTHORS  ChangeLog  Makefile.am  TODO  autogen.sh  buildbot.sh  configure.in  gen_all_builds.pl  gen_all_builds_launch.pl  gen_all_distchecks.pl  gen_all_distchecks_short.pl  setup.sh
trunk/UI/: Makefile.am
trunk/UI/cli/: Makefile.am  btgcli.cpp  cli.cpp  cli.h  clicmd.cpp  nscreen.cpp  nscreen.h  nscreen_log.cpp  nscreen_log.h  runstate.h  screen.cpp  screen_log.h
trunk/UI/gui/: Makefile.am  aboutdialog.cpp  aboutdialog.h  aboutimage.h  authdialog.cpp  authdialog.h  btgui.cpp  btgui.man  detailsmodel.cpp  detailsmodel.h  detailstreeview.cpp  detailstreeview.h  errordialog.cpp  errordialog.h  filemodel.cpp  filemodel.h  fipixbox.cpp  fipixbox.h  gtkmm_log.cpp  gtkmm_log.h  gtkmm_ver.h  guihandler.cpp  guihandler.h  guihelper.cpp  guiutils.cpp  guiutils.h  initwindow.cpp  initwindow.h  limitdialog.cpp  limitdialog.h  logtextview.cpp  logtextview.h  mainfiletreeview.cpp  mainfiletreeview.h  mainmenubar.cpp  mainmenubar.h  mainmodel.cpp  mainmodel.h  mainnotebook.cpp  mainnotebook.h  (+32 more)
trunk/bcore/: Makefile.am  addrport.cpp  addrport.h  argif.cpp  argif.h  bitvector.cpp  bitvector.h  btg_assert.cpp  btg_assert.h  command_factory.cpp  command_factory.h  configuration.cpp  configuration.h  copts.cpp  copts.h  crashlog.cpp  crashlog.h  dbuf.cpp  dbuf.h  file_info.cpp  file_info.h  filestatus.h  helpermacro.h  hrr.cpp  hrr.h  hrt.cpp  hrt.h  hru.cpp  hru.h  logmacro.h  opstatus.h  peer.cpp  peer.h  printable.h  project.cpp  project.h  sbuf.cpp  sbuf.h  serializable.h  sigh.c  (+13 more)
trunk/bcore/auth/: hash.cpp  hash.h
trunk/bcore/client/: Makefile.am  carg.cpp  carg.h  clientcallback.cpp  clientcallback.h  clientdynconfig.cpp  clientdynconfig.h  clienthandler.cpp  clienthandler.h  configuration.cpp  configuration.h  cpif.cpp  cpif.h  filephelper.cpp  filephelper.h  handlerthr.cpp  handlerthr.h  helper.cpp  helper.h  helper_argif.h  lastfiles.cpp  lastfiles.h  lasturls.cpp  lasturls.h  loadhelper.cpp  loadhelper.h  loglevel.h  ratio.cpp  ratio.h  statemachine.cpp  statemachine.h  statemachine_cb.cpp  urlhelper.cpp
trunk/bcore/command/: ack.cpp  ack.h  command.cpp  command.h  context.cpp  context.h  context_abort.cpp  context_abort.h  context_clean.cpp  context_clean.h  context_clean_rsp.cpp  context_clean_rsp.h  context_create.cpp  context_create.h  context_create_file.cpp  context_create_file.h  context_create_url.cpp  context_create_url.h  context_fi.cpp  context_fi.h  context_fi_rsp.cpp  context_fi_rsp.h  context_file.cpp  context_file.h  context_last.cpp  context_last.h  context_li_status.cpp  context_li_status.h  context_li_status_rsp.cpp  context_li_status_rsp.h  context_limit.cpp  context_limit.h  context_peers.cpp  context_peers.h  context_peers_rsp.cpp  context_peers_rsp.h  context_start.cpp  context_start.h  context_status.cpp  context_status.h  (+43 more)
trunk/bcore/externalization/: ext_macro.h  externalization.cpp  externalization.h  externalization_factory.cpp  (+6 more)
trunk/daemon/: Makefile.am  alerthandler_thr.cpp  alerthandler_thr.h  btgcallback.man  btgdaemon.cpp  btgdaemon.h  btgdaemon.man  callbackmgr.cpp  callbackmgr.h  connectionextrastate.cpp  connectionextrastate.h  connectionhandler.cpp  connectionhandler.h  context.cpp  context.h  context_alert.cpp  context_file.cpp  context_magnet.cpp  context_session.cpp  daemon.c  daemon.h  daemondata.cpp  daemondata.h  daemonhandler.cpp  daemonhandler.h  daemonhandler_file.cpp  daemonhandler_thr.cpp  daemonhandler_thr.h  daemonhandler_url.cpp  darg.cpp  darg.h  dconfig.cpp  dconfig.h  eventhandler.cpp  eventhandler.h  filemgr.cpp  filemgr.h  filetrack.cpp  filetrack.h  filetrackdata.cpp  (+19 more)
trunk/debian/: Makefile.am  README.this  btg-cli-common.install  btg-cli.install  btg-daemon.init  btg-daemon.install  btg-daemon.postinst  btg-daemon.preinst  changelog  control.in  debfiles.gen.sh  rules
trunk/doc/: Doxyfile  Makefile.am  btg.man  btg_config.man
trunk/m4/: ax_boost_iostreams.m4  btg_link_check.m4  btg_rblibtorrent_check.m4  btg_upnp_check.m4  check_zlib.m4  libgnutls-version.m4  lirc_client.m4  rblibtorrent.m4  xmlrpc.m4
trunk/script/: Makefile.am  btg-config.in  in2btg  rss2btg
trunk/utest/: Makefile.am  files.h  listener.cpp  listener.h  synchronize.cpp  synchronize.h  test_bcore.cpp  test_bcore.h  test_bcore_client.cpp  test_bcore_client.h  test_btgncli.cpp  test_btgncli.h  test_daemon.cpp  test_daemon.h  test_daemon_res.cpp  test_daemon_res.h  test_gen_transport.cpp  test_gen_transport.h  test_http.cpp  test_http.h  test_nscreen.cpp  test_nscreen.h  test_os.cpp  test_os.h  test_tcpip.cpp  test_tcpip.h  testrunner.cpp  testrunner.h
(+1331 files in other folders)
